--- a/trainer.yaml
+++ b/trainer.yaml
@@ -69,7 +69,7 @@ outputs:
   - name: model_py
     type: Data
   - name: schema_json
-    type: String
+    type: Data
 
 implementation:
   container:
@@ -82,10 +82,25 @@ implementation:
         set -o pipefail
 
         cat >/tmp/train_with_gemmatrainer.py <<'PY'
-        import argparse, json, os
+        import argparse, json, os, sys
         from pathlib import Path
 
+        # ---- positional→flag normalizer (Python-side; avoids bash gotchas) ----
+        def normalize_argv(argv):
+          expected = ["--tokenizer-json", "--train-corpus", "--model-config", "--model-weights", "--model-py-in"]
+          out = []
+          i = 0
+          for a in argv:
+            if not a.startswith("-") and i < len(expected):
+              out.extend([expected[i], a])
+              i += 1
+            else:
+              out.append(a)
+          return out
+        # ----------------------------------------------------------------------
+
         def main():
+          # Build parser but DON'T parse yet
           ap = argparse.ArgumentParser()
           ap.add_argument("--tokenizer-json", required=True)
           ap.add_argument("--train-corpus", required=True)
@@ -114,29 +129,31 @@ implementation:
           ap.add_argument("--training-report", required=True)
           ap.add_argument("--loss-curve-csv", required=True)
           ap.add_argument("--schema-output", required=True)
-          args = ap.parse_args()
 
-          # Import inside container
+          # Normalize argv to tolerate positional inputs
+          argv = normalize_argv(sys.argv[1:])
+          print("[DEBUG] argv after normalize:", " ".join(argv))
+          args = ap.parse_args(argv)
+
+          # Imports kept inside container
           from nesy_factory.language_model.train import GemmaTrainer
 
-          # Ensure output directories exist
-          for p in (
-            args.best_weights, args.final_weights, args.training_report,
-            args.loss_curve_csv, args.model_py_out, args.schema_output
-          ):
+          # Ensure output dirs exist
+          for p in (args.best_weights, args.final_weights, args.training_report,
+                    args.loss_curve_csv, args.model_py_out, args.schema_output):
             d = os.path.dirname(p)
             if d:
               os.makedirs(d, exist_ok=True)
 
-          # Helpful diagnostics
+          # Quick existence checks
           print("Pre-train existence checks:")
           print(" - tokenizer_json exists:", Path(args.tokenizer_json).exists())
-          print(" - train_corpus exists:", Path(args.train_corpus).exists())
-          print(" - model_config exists:", Path(args.model_config).exists())
-          print(" - model_weights exists:", Path(args.model_weights).exists())
-          print(" - model_py_in exists:", Path(args.model_py_in).exists())
+          print(" - train_corpus exists:",   Path(args.train_corpus).exists())
+          print(" - model_config exists:",   Path(args.model_config).exists())
+          print(" - model_weights exists:",  Path(args.model_weights).exists())
+          print(" - model_py_in exists:",    Path(args.model_py_in).exists())
 
-          # Run GemmaTrainer (compatible with TinyGPTNeoX alias as well)
+          # Run trainer
           trainer = GemmaTrainer()
           trainer.run(
             tokenizer_json=args.tokenizer_json,
@@ -165,7 +182,7 @@ implementation:
             loss_curve_csv=args.loss_curve_csv,
           )
 
-          # Build compact schema summary (inputs + hyperparams + trainer report)
+          # Summarize outputs
           try:
             with open(args.training_report, "r", encoding="utf-8") as f:
               rep = json.load(f)
@@ -223,28 +240,53 @@ implementation:
 
         python3 -u /tmp/train_with_gemmatrainer.py "$@"
     args:
-      - --tokenizer-json={inputPath: tokenizer_json}
-      - --train-corpus={inputPath: train_corpus}
-      - --model-config={inputPath: model_config}
-      - --model-weights={inputPath: model_weights}
-      - --model-py-in={inputPath: model_py_in}
-      - --learning-rate={inputValue: learning_rate}
-      - --min-lr={inputValue: min_lr}
-      - --warmup-steps={inputValue: warmup_steps}
-      - --max-iters={inputValue: max_iters}
-      - --batch-size={inputValue: batch_size}
-      - --block-size={inputValue: block_size}
-      - --grad-accum={inputValue: grad_accum}
-      - --eval-interval={inputValue: eval_interval}
-      - --eval-iters={inputValue: eval_iters}
-      - --weight-decay={inputValue: weight_decay}
-      - --beta2={inputValue: beta2}
-      - --clip-grad-norm={inputValue: clip_grad_norm}
-      - --val-fraction={inputValue: val_fraction}
-      - --num-proc={inputValue: num_proc}
-      - --best-weights={outputPath: best_weights}
-      - --final-weights={outputPath: final_weights}
-      - --training-report={outputPath: training_report}
-      - --loss-curve-csv={outputPath: loss_curve_csv}
-      - --model-py-out={outputPath: model_py}
-      - --schema-output={outputPath: schema_json}
+      - --tokenizer-json
+      - inputPath: tokenizer_json
+      - --train-corpus
+      - inputPath: train_corpus
+      - --model-config
+      - inputPath: model_config
+      - --model-weights
+      - inputPath: model_weights
+      - --model-py-in
+      - inputPath: model_py_in
+      - --learning-rate
+      - inputValue: learning_rate
+      - --min-lr
+      - inputValue: min_lr
+      - --warmup-steps
+      - inputValue: warmup_steps
+      - --max-iters
+      - inputValue: max_iters
+      - --batch-size
+      - inputValue: batch_size
+      - --block-size
+      - inputValue: block_size
+      - --grad-accum
+      - inputValue: grad_accum
+      - --eval-interval
+      - inputValue: eval_interval
+      - --eval-iters
+      - inputValue: eval_iters
+      - --weight-decay
+      - inputValue: weight_decay
+      - --beta2
+      - inputValue: beta2
+      - --clip-grad-norm
+      - inputValue: clip_grad_norm
+      - --val-fraction
+      - inputValue: val_fraction
+      - --num-proc
+      - inputValue: num_proc
+      - --best-weights
+      - outputPath: best_weights
+      - --final-weights
+      - outputPath: final_weights
+      - --training-report
+      - outputPath: training_report
+      - --loss-curve-csv
+      - outputPath: loss_curve_csv
+      - --model-py-out
+      - outputPath: model_py
+      - --schema-output
+      - outputPath: schema_json
