--- a/trainer.yaml
+++ b/trainer.yaml
@@ -1,5 +1,5 @@
-name: LM Trainerr
-description: Tokenizes corpus to memmaps and trains a Gemma3-compatible model (Gemma or GPT-NeoX alias) with warmup→cosine LR, grad-accum, and best/final checkpoints.
+name: LM Trainer
+description: Tokenizes corpus to memmaps and trains a Gemma3-compatible model (Gemma or GPT-NeoX alias) with warmup→cosine LR, grad accumulation, and best/final checkpoints.
 
 inputs:
   - name: tokenizer_json
@@ -69,7 +69,7 @@ outputs:
   - name: model_py
     type: Data
   - name: schema_json
-    type: String
+    type: Data
 
 implementation:
   container:
@@ -81,145 +81,172 @@ implementation:
       - |-
         set -o pipefail
 
+        echo "[DEBUG] argv from KFP:" "$@"
+        echo "[DEBUG] mounted /tmp/inputs (if present):"
+        find /tmp/inputs -maxdepth 2 -type f -printf "%P\n" 2>/dev/null || true
+
         cat >/tmp/train_with_gemmatrainer.py <<'PY'
-        import argparse, json, os
+        import argparse, json, os, shutil
         from pathlib import Path
 
+        def find_model_py_file(path_str: str) -> str:
+            """Accept either a file or a directory; if directory, pick the first .py file."""
+            p = Path(path_str)
+            if p.is_file():
+                return str(p)
+            if not p.exists():
+                raise FileNotFoundError(f"model_py_in not found: {p}")
+            py_files = sorted([pp for pp in p.iterdir() if pp.suffix == ".py"])
+            if not py_files:
+                raise FileNotFoundError(f"No .py file found under directory: {p}")
+            return str(py_files[0])
+
         def main():
-          ap = argparse.ArgumentParser()
-          ap.add_argument("--tokenizer-json", required=True)
-          ap.add_argument("--train-corpus", required=True)
-          ap.add_argument("--model-config", required=True)
-          ap.add_argument("--model-weights", required=True)
-          ap.add_argument("--model-py-in", required=True)
-          ap.add_argument("--model-py-out", required=True)
+            ap = argparse.ArgumentParser()
+            ap.add_argument("--tokenizer-json", required=True)
+            ap.add_argument("--train-corpus", required=True)
+            ap.add_argument("--model-config", required=True)
+            ap.add_argument("--model-weights", required=True)
+            ap.add_argument("--model-py-in", required=True)
+            ap.add_argument("--model-py-out", required=True)
 
-          ap.add_argument("--learning-rate", type=float, required=True)
-          ap.add_argument("--min-lr", type=float, required=True)
-          ap.add_argument("--warmup-steps", type=int, required=True)
-          ap.add_argument("--max-iters", type=int, required=True)
-          ap.add_argument("--batch-size", type=int, required=True)
-          ap.add_argument("--block-size", type=int, required=True)
-          ap.add_argument("--grad-accum", type=int, required=True)
-          ap.add_argument("--eval-interval", type=int, required=True)
-          ap.add_argument("--eval-iters", type=int, required=True)
-          ap.add_argument("--weight-decay", type=float, required=True)
-          ap.add_argument("--beta2", type=float, required=True)
-          ap.add_argument("--clip-grad-norm", type=float, required=True)
-          ap.add_argument("--val-fraction", type=float, required=True)
-          ap.add_argument("--num-proc", type=int, required=True)
+            ap.add_argument("--learning-rate", type=float, required=True)
+            ap.add_argument("--min-lr", type=float, required=True)
+            ap.add_argument("--warmup-steps", type=int, required=True)
+            ap.add_argument("--max-iters", type=int, required=True)
+            ap.add_argument("--batch-size", type=int, required=True)
+            ap.add_argument("--block-size", type=int, required=True)
+            ap.add_argument("--grad-accum", type=int, required=True)
+            ap.add_argument("--eval-interval", type=int, required=True)
+            ap.add_argument("--eval-iters", type=int, required=True)
+            ap.add_argument("--weight-decay", type=float, required=True)
+            ap.add_argument("--beta2", type=float, required=True)
+            ap.add_argument("--clip-grad-norm", type=float, required=True)
+            ap.add_argument("--val-fraction", type=float, required=True)
+            ap.add_argument("--num-proc", type=int, required=True)
 
-          ap.add_argument("--best-weights", required=True)
-          ap.add_argument("--final-weights", required=True)
-          ap.add_argument("--training-report", required=True)
-          ap.add_argument("--loss-curve-csv", required=True)
-          ap.add_argument("--schema-output", required=True)
-          args = ap.parse_args()
+            ap.add_argument("--best-weights", required=True)
+            ap.add_argument("--final-weights", required=True)
+            ap.add_argument("--training-report", required=True)
+            ap.add_argument("--loss-curve-csv", required=True)
+            ap.add_argument("--schema-output", required=True)
+            args = ap.parse_args()
 
-          from nesy_factory.language_model.train import GemmaTrainer
+            # Print the resolved arguments for debugging
+            print("[DEBUG] Parsed args:")
+            for k, v in vars(args).items():
+                print(f"  - {k}: {v}")
 
-          # Ensure output directories exist
-          for p in (
-            args.best_weights, args.final_weights, args.training_report,
-            args.loss_curve_csv, args.model_py_out, args.schema_output
-          ):
-            d = os.path.dirname(p)
-            if d:
-              os.makedirs(d, exist_ok=True)
+            # Lazy import inside container
+            from nesy_factory.language_model.train import GemmaTrainer
 
-          # Helpful diagnostics
-          print("Pre-train existence checks:")
-          print(" - tokenizer_json exists:", Path(args.tokenizer_json).exists())
-          print(" - train_corpus exists:", Path(args.train_corpus).exists())
-          print(" - model_config exists:", Path(args.model_config).exists())
-          print(" - model_weights exists:", Path(args.model_weights).exists())
-          print(" - model_py_in exists:", Path(args.model_py_in).exists())
+            # Ensure output directories exist
+            for out_path in (
+                args.best_weights, args.final_weights, args.training_report,
+                args.loss_curve_csv, args.model_py_out, args.schema_output
+            ):
+                d = os.path.dirname(out_path)
+                if d:
+                    os.makedirs(d, exist_ok=True)
 
-          trainer = GemmaTrainer()
-          trainer.run(
-            tokenizer_json=args.tokenizer_json,
-            train_corpus=args.train_corpus,
-            model_config=args.model_config,
-            model_weights=args.model_weights,
-            model_py_in=args.model_py_in,
-            model_py_out=args.model_py_out,
-            learning_rate=args.learning_rate,
-            min_lr=args.min_lr,
-            warmup_steps=args.warmup_steps,
-            max_iters=args.max_iters,
-            batch_size=args.batch_size,
-            block_size=args.block_size,
-            grad_accum=args.grad_accum,
-            eval_interval=args.eval_interval,
-            eval_iters=args.eval_iters,
-            weight_decay=args.weight_decay,
-            beta2=args.beta2,
-            clip_grad_norm=args.clip_grad_norm,
-            val_fraction=args.val_fraction,
-            num_proc=args.num_proc,
-            best_weights=args.best_weights,
-            final_weights=args.final_weights,
-            training_report=args.training_report,
-            loss_curve_csv=args.loss_curve_csv,
-          )
+            # Existence checks
+            print("[DEBUG] Existence checks:")
+            print("  tokenizer_json:", os.path.exists(args.tokenizer_json))
+            print("  train_corpus:", os.path.exists(args.train_corpus))
+            print("  model_config:", os.path.exists(args.model_config))
+            print("  model_weights:", os.path.exists(args.model_weights))
+            print("  model_py_in:", os.path.exists(args.model_py_in))
 
-          # Schema summary
-          try:
-            with open(args.training_report, "r", encoding="utf-8") as f:
-              rep = json.load(f)
-          except Exception as e:
-            rep = {"error_loading_training_report": repr(e)}
+            # Ensure we have a concrete .py file and copy to model_py_out
+            src_py = find_model_py_file(args.model_py_in)
+            shutil.copyfile(src_py, args.model_py_out)
+            print(f"[INFO] Copied model code: {src_py} -> {args.model_py_out}")
 
-          schema = {
-            "inputs": {
-              "tokenizer_json": args.tokenizer_json,
-              "train_corpus": args.train_corpus,
-              "model_config": args.model_config,
-              "model_weights": args.model_weights,
-              "model_py_in": args.model_py_in,
-            },
-            "hyperparams": {
-              "learning_rate": args.learning_rate,
-              "min_lr": args.min_lr,
-              "warmup_steps": args.warmup_steps,
-              "max_iters": args.max_iters,
-              "batch_size": args.batch_size,
-              "block_size": args.block_size,
-              "grad_accum": args.grad_accum,
-              "eval_interval": args.eval_interval,
-              "eval_iters": args.eval_iters,
-              "weight_decay": args.weight_decay,
-              "beta2": args.beta2,
-              "clip_grad_norm": args.clip_grad_norm,
-              "val_fraction": args.val_fraction,
-              "num_proc": args.num_proc,
-            },
-            "outputs": {
-              "best_weights": args.best_weights,
-              "final_weights": args.final_weights,
-              "training_report": args.training_report,
-              "loss_curve_csv": args.loss_curve_csv,
-              "model_py": args.model_py_out,
-            },
-            "trainer_report": rep,
-          }
+            # Run training
+            trainer = GemmaTrainer()
+            trainer.run(
+                tokenizer_json=args.tokenizer_json,
+                train_corpus=args.train_corpus,
+                model_config=args.model_config,
+                model_weights=args.model_weights,
+                model_py_in=args.model_py_out,   # use the copied file
+                model_py_out=args.model_py_out,
+                learning_rate=args.learning_rate,
+                min_lr=args.min_lr,
+                warmup_steps=args.warmup_steps,
+                max_iters=args.max_iters,
+                batch_size=args.batch_size,
+                block_size=args.block_size,
+                grad_accum=args.grad_accum,
+                eval_interval=args.eval_interval,
+                eval_iters=args.eval_iters,
+                weight_decay=args.weight_decay,
+                beta2=args.beta2,
+                clip_grad_norm=args.clip_grad_norm,
+                val_fraction=args.val_fraction,
+                num_proc=args.num_proc,
+                best_weights=args.best_weights,
+                final_weights=args.final_weights,
+                training_report=args.training_report,
+                loss_curve_csv=args.loss_curve_csv,
+            )
 
-          with open(args.schema_output, "w", encoding="utf-8") as f:
-            json.dump(schema, f, indent=2)
+            # Build a compact schema JSON
+            try:
+                with open(args.training_report, "r", encoding="utf-8") as f:
+                    report = json.load(f)
+            except Exception as e:
+                report = {"error": f"failed_to_read_training_report: {e!r}"}
 
-          print("[DONE] Training complete.")
-          print(f"[INFO] best:   {args.best_weights}")
-          print(f"[INFO] final:  {args.final_weights}")
-          print(f"[INFO] report: {args.training_report}")
-          print(f"[INFO] curve:  {args.loss_curve_csv}")
-          print(f"[INFO] code:   {args.model_py_out}")
-          print(f"[INFO] schema: {args.schema_output}")
+            schema = {
+                "inputs": {
+                    "tokenizer_json": args.tokenizer_json,
+                    "train_corpus": args.train_corpus,
+                    "model_config": args.model_config,
+                    "model_weights": args.model_weights,
+                    "model_py_in": args.model_py_in,
+                },
+                "hyperparams": {
+                    "learning_rate": args.learning_rate,
+                    "min_lr": args.min_lr,
+                    "warmup_steps": args.warmup_steps,
+                    "max_iters": args.max_iters,
+                    "batch_size": args.batch_size,
+                    "block_size": args.block_size,
+                    "grad_accum": args.grad_accum,
+                    "eval_interval": args.eval_interval,
+                    "eval_iters": args.eval_iters,
+                    "weight_decay": args.weight_decay,
+                    "beta2": args.beta2,
+                    "clip_grad_norm": args.clip_grad_norm,
+                    "val_fraction": args.val_fraction,
+                    "num_proc": args.num_proc,
+                },
+                "outputs": {
+                    "best_weights": args.best_weights,
+                    "final_weights": args.final_weights,
+                    "training_report": args.training_report,
+                    "loss_curve_csv": args.loss_curve_csv,
+                    "model_py": args.model_py_out,
+                },
+                "trainer_report": report,
+            }
+            with open(args.schema_output, "w", encoding="utf-8") as f:
+                json.dump(schema, f, indent=2)
+
+            print("[DONE] Training complete.")
+            print(f"[INFO] best:   {args.best_weights}")
+            print(f"[INFO] final:  {args.final_weights}")
+            print(f"[INFO] report: {args.training_report}")
+            print(f"[INFO] curve:  {args.loss_curve_csv}")
+            print(f"[INFO] code:   {args.model_py_out}")
+            print(f"[INFO] schema: {args.schema_output}")
 
         if __name__ == "__main__":
-          main()
+            main()
         PY
 
-        echo "[DEBUG] args from KFP:" "$@"
+        # Execute with the exact argv KFP provided
         python3 -u /tmp/train_with_gemmatrainer.py "$@"
     args:
       - --tokenizer-json
